--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
       <div class="p-4 shadow-4 rounded-3" style="background-color: hsl(0, 0%, 94%);">
         <h2>RS automobili</h2>
+          <h2>RS automobili</h2>
         <p>
            Vrsimo negu vaseg automobila
         </p>
