--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script></script>
-    <script></script>
-    <script></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="main.js"></script>
     <link href="/main.js" rel="javascript">
-    <link href="/styles.css" rel="stylesheet">
+    <link href="/styles/styles.css" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -19,7 +16,7 @@
 </head>
 <body>
     <!-- nav bar-->
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-sm bg-light navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="/img/logo.png" style="height: 4rem;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -28,13 +25,13 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">About us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Contact me</a>
               </li>    
             </ul>
           </div>
@@ -80,25 +77,24 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="/img/background-carousel1.jpg" class="d-block w-100" alt="...">
+        <img src="/img/bg-carousel1.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-sm-block">
-          <h1 class="display-2">VOJISLAV JE GEJ</h1>
-          <h3>stvarno je gej</h3>
-          <button type="button" class="btn btn-outline-light btn-lg">KONTAKTIRAJ jebem ti mater ME</button>
+          <h1 class="display-3">VOJISLAV RAJC</h1>
+          <button type="button" class="btn btn-outline-light btn-lg">Kontaktiraj me</button>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="/img/background-carousel2.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+        <img src="/img/bg-carousel2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block" style="color: white;">
+          <h3 class="display-3">Dubinsko Usisavanje</h3>
+          <p>Vrsimo profesionalno dubinsko usisavanje</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/img/background-carousel3.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+        <img src="/img/bg-carousel3.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block" style="color: white;">
+          <h3 class="display-3">Poliranje</h3>
+          <p>Poliranje vaseg auta uz iskusne majstore</p>
         </div>
       </div>
     </div>
@@ -127,32 +123,19 @@
         <hr class="my-4" />
       
         <p>
-            Profesionalno usisivanje ciscenje i poliranje
+            Sva vrsta poliranja i dubinsko-hemijskih pranja
         </p>
         <button type="button" class="btn btn-outline-dark">
-          Zakazivanje
+          Zakazivanje putem mail-a
         </button>
       </div>
 
-
-
-
-
-
-
     <!--welcome section-->
-
-
 
     <!--three column section-->
 
-
-
-
-
-
     <div class="container">
-        <div class="row g-5">
+        <div class="row g-5 pt-5 pb-5">
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card">
                     <img src="/img/bosch-logo.png" class="card-img-top">
@@ -173,10 +156,10 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card">
-                    <img src="/img/yugo2.png" class="card-img-top" style="height: 7rem;">
+                    <img src="/img/alfa-romeo.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Yugo</h5>
-                        <p class="card-text">Koristimo Yugo za prevoz u firmi iz razloga sto je Yugo jedna od vodecih firmi na svetu u proizvodnji Automobila</p>
+                        <p class="card-text">Koristimo Alfu za prevoz u firmi iz razloga jer nemamo para</p>
                     </div>
                 </div>
             </div>
