--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
       <div class="carousel-item active" data-bs-interval="10000">
         <img src="/img/bg-carousel1.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-sm-block">
-          <h1 class="display-3">VOJISLAV RAJC</h1>
+          <h1 class="display-3 text-white">VOJISLAV RAJC</h1>
           <button type="button" class="btn btn-outline-light btn-lg">Kontaktiraj me</button>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
         <img src="/img/bg-carousel2.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block" style="color: white;">
-          <h3 class="display-3">Dubinsko Usisavanje</h3>
+          <h3 class="display-3 text-white">Dubinsko Usisavanje</h3>
           <p>Vrsimo profesionalno dubinsko usisavanje</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="/img/bg-carousel3.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block" style="color: white;">
-          <h3 class="display-3">Poliranje</h3>
+          <h3 class="display-3 text-white">Poliranje</h3>
           <p>Poliranje vaseg auta uz iskusne majstore</p>
         </div>
       </div>
@@ -158,7 +158,7 @@
                 <div class="card">
                     <img src="/img/alfa-romeo.png" class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title">Yugo</h5>
+                        <h5 class="card-title">Alfa romeo</h5>
                         <p class="card-text">Koristimo Alfu za prevoz u firmi iz razloga jer nemamo para</p>
                     </div>
                 </div>
